# org.github.GtkChess-old-

./: README.md  meson.build  org.github.GtkChess.json
.flatpak-builder/cache/refs/heads/x86_64-org.github.GtkChess.json/: init
.flatpak-builder/checksums/: x86_64-org.github.GtkChess.json
data/: meson.build  org.github.GtkChess.appdata.xml.in  org.github.GtkChess.desktop.in  org.github.GtkChess.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: game-board.js  gtkchess.data.gresource.xml  main.js  meson.build  org.github.GtkChess.data.gresource.xml  org.github.GtkChess.src.gresource.xml  pieces.js  piecesController.js  style.css  window.js  window.ui
